# ecg_imu

./: .gitignore  README.md  acc_data.csv  hrtest.csv  pyproject.toml  sandbox.ipynb
scripts/: config.yaml  polar_data_stream.py  preferences.yaml  read_ecg_stream.py  utils.py
scripts/esp32/: main  main.c
scripts/esp32/main.dSYM/Contents/Resources/DWARF/: main
scripts/esp32/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
scripts/polar10/: acc_data.csv  belt_1.md  bleak_test.py  hrtest.csv  polar_h10.ipynb  read_acc_stream.py  sandbox.ipynb  sensor_ads.txt
scripts/polar10/sandboxing/: hr_ide.ipynb  sb_hr_belt_access.py  sb_hr_ide.ipynb  sb_polar_h10.ipynb
scripts/sandboxing/: acc_data.csv  acc_data1.csv  acc_data2.csv  acc_data3.csv  acc_data_vox_260413.csv  acc_data_vox_mozgas.csv  ecg_data.csv  ecg_data1.csv  ecg_data_vox_260413.csv  ecg_data_vox_mozgas.csv  hr_ide.ipynb  hrtest.csv  read_acc_stream.py  sb_hr_belt_access.py  sb_read_hr_stream.py  voxel_acc_data.csv  voxel_acc_data2.csv  voxel_ecg_data.csv  voxel_ecg_data2.csv
