[project]
name = "ecg-imu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bleak>=2.1.1",
    "ipykernel>=7.2.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "polar-python>=1.0.0",
]
